[gd_scene load_steps=8 format=3 uid="uid://ddknmqi5sb88o"]

[ext_resource type="Script" uid="uid://bktap66c1hvla" path="res://Scripts/Entities/Enemies/enemy.gd" id="1_748yg"]
[ext_resource type="Texture2D" uid="uid://cq3lpweq6qmb2" path="res://Assets/Enemies/spider.png" id="2_w4jud"]
[ext_resource type="Texture2D" uid="uid://la4ld2eylro1" path="res://Assets/Enemies/spider_2.png" id="3_4cflg"]
[ext_resource type="PackedScene" uid="uid://dxtlhaoalm7os" path="res://Scenes/Entities/Projectiles/Source/bullet_source.tscn" id="3_5ncfx"]
[ext_resource type="PackedScene" uid="uid://b3ifmidv1nnnd" path="res://Scenes/Entities/Projectiles/projectile.tscn" id="4_4cflg"]

[sub_resource type="SpriteFrames" id="SpriteFrames_hrb7o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_w4jud")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_w4jud")
}, {
"duration": 1.0,
"texture": ExtResource("3_4cflg")
}],
"loop": true,
"name": &"walk",
"speed": 7.0
}]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_w4jud"]
size = Vector2(42, 23)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_748yg")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.065, 0.065)
sprite_frames = SubResource("SpriteFrames_hrb7o")
autoplay = "default"
frame_progress = 0.13855

[node name="AggroRange" type="Area2D" parent="."]

[node name="AttackRange" type="Area2D" parent="."]

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="BulletSource" parent="." instance=ExtResource("3_5ncfx")]
position = Vector2(14, 0)
projectile = ExtResource("4_4cflg")

[node name="NoTexture" type="Sprite2D" parent="."]
visible = false
position = Vector2(-7, 0)
texture = SubResource("PlaceholderTexture2D_w4jud")

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="body_entered" from="AggroRange" to="." method="_on_aggro_range_body_entered"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
